# AudAgent

./: .gitignore  Artifact-Appendix.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  monte_carlo_testing.py  pyproject.toml  requirements.txt  setup.py
audagent/: README.md  __init__.py  auditor.py  cli.py  client.py  consts.py  core.py  detector.py  enums.py  event_processor.py  models.py  monitor.py  pipes.py  policy_parser.py  protos.py  singleton.py
audagent/annotator/: models.py  presidio.py
audagent/auditing/: checker.py  format_target_policy.py  models.py
audagent/auditor/: checker.py  format_target_policy.py  models.py
audagent/graph/: consts.py  enums.py  graph.py  models.py
audagent/hooks/: base.py  models.py
audagent/llm/: README.md  __init__.py  anthropic_models.py  enums.py  jsonrpc_models.py  models.py  ollama_models.py  openai_models.py
audagent/ontology/: data_type_graph.json  entity_graph.json
eval_annotation/: annotator_testing.py
examples/: advanced_usage.py  basic_usage.py  example_policy.json  exchange_rate_example.py  my_ssn.txt  personal_email_disclosure.py  ssn_disclosure.py  ssn_disclosure_disguised_tools.py  ssn_disclosure_disguised_tools_anthropic.py  ssn_disclosure_disguised_tools_deepseek.py  ssn_disclosure_disguised_tools_gemini.py  ssn_disclosure_disguised_tools_openai.py
pri_policy/: autoformalization_prompt_1.md
privacy_policy/: autoformalization_prompt_2.md
promptfoo/: entity_mapping.json  pii_direct_prompts.jsonl  pii_session_prompts.jsonl  privacy_violation_prompts.py
tests/: test_audagent.py
(+105 files in other folders)
